--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.16",
+    "swiper": "^11.2.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
